--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -75,18 +75,6 @@
                             <form name="rateForm" ng-controller="profileCtrl" ng-submit="submitRate()">
                                 <input type="number" name="rate" ng-model="rateGiven" placeholder="A number from 1-5"> <br>
                                 <button type="submit" class="btn btn-default">Rate {{userInfo.username}}</button>
-                                <button class="btn btn-primary" data-toggle="modal" data-target="#myModal-write">Message {{userInfo.username}}</button>
-                                <div id="myModal-write" class="modal fade">
-                                    <div class="modal-dialog modal-lg" ng-if="token">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h2>Write your message Below</h2>
-                                            </div>
-                                            <input type="text" name="content" ng-model="content" placeholder="Your mesage here" rows="3" class="form-control">
-                                            <button class="btn btn-success" ng-click="sendMessage()">Send</button>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div ng-if="message" type="danger">
                                     {{message}}
                                 </div>
@@ -94,6 +82,21 @@
                                     {{messageRated}}
                                 </div>
                             </form>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#myModal-write">Message {{userInfo.username}}</button>
+                            <div id="myModal-write" class="modal fade">
+                                <div class="modal-dialog modal-lg">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h2>Write your message Below</h2>
+                                        </div>
+                                        <form name="messageForm" ng-controller="profileCtrl" ng-submit="sendMessage()">
+                                            <textarea name="description" ng-model="content" placeholder="description" rows="3" class="form-control"></textarea>
+                                            <button type="submit" class="btn btn-default">test</button>
+                                        </form>
+                                        {{messageIndicator}}
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <!-- End of profile info -->
