Delete post Done

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -21,6 +21,11 @@ p {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
+#delete-btn {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    background-color : red ;
+}
 
 #new-btn {
     width: 95%;
