--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -110,6 +110,9 @@
                                                 <!-- fixing description length to display by 250 chars -->
                                                 <p>{{ post.description.slice(0,250) }}...</p>
                                                 <!-- link to show post page -->
+                                                <div ng-controller="profileCtrl" ng-click="deletePost()">
+                                                    <button type="button" ng-if="myProfile" class="btn btn-primary" id="delete-btn">Delete</button>
+                                                </div>
                                                 <div ng-controller="profileCtrl" ng-click="editPost()">
                                                     <button type="button" ng-if="myProfile" class="btn btn-primary" id="edit-btn">Edit</button>
                                                 </div>
@@ -137,5 +140,6 @@
                 The user {{givenUsername}} does not exist.
             </h3>
         </div>
+
     </div>
 </div>
