--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -26,7 +26,6 @@
                         <h2>{{userInfo.firstName}} {{userInfo.lastName}}</h2>
                         <p>{{userInfo.username}}</p>
                         <div ng-if="userInfo.rate==0">
-                            <!--<span class="glyphicon glyphicon-star" aria-hidden="true"></span>-->
                             <p>This user has not been rated, yet!</p>
                         </div>
                         <div ng-if="userInfo.rate!=0">
@@ -61,30 +60,11 @@
                         <div ng-if="myEmail==userInfo.email">
                             <a href="/editProfile" class="btn btn-primary" id="profile-edit-btn">Profile settings</a>
                             <button class="btn btn-primary" data-toggle="modal" data-target="#myModal-messages">My Inbox</button>
-                            <div id="myModal-messages" class="modal fade">
-                                <div class="modal-dialog modal-lg">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h2>My Inbox</h2>
-                                        </div>
-                                        <div ng-if="!messageFail">
-                                            <div class="modal-body" ng-repeat="message in fullMessages">
-                                                {{message.sender}} : {{message.content}}
-                                            </div>
-                                        </div>
-                                        <div ng-if="messageFail">
-                                            <div class="modal-body">
-                                                {{messageFail}}
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                         <div ng-if="myEmail!=userInfo.email">
                             <form name="rateForm" ng-controller="profileCtrl" ng-submit="submitRate()">
-                                <input type="number" name="rate" ng-model="rateGiven" placeholder="A number from 1-5"> <br>
-                                <button type="submit" class="btn btn-default">Rate {{userInfo.username}}</button>
+                                <input type="number" name="rate" ng-model="rateGiven" placeholder="Rate {{userInfo.username}}"> <br>
+                                <button type="submit" class="btn btn-primary" id="rate-btn">Rate {{userInfo.username}}</button>
                                 <div ng-if="message" type="danger">
                                     {{message}}
                                 </div>
@@ -92,21 +72,7 @@
                                     {{messageRated}}
                                 </div>
                             </form>
-                            <button class="btn btn-primary" data-toggle="modal" data-target="#myModal-write">Message {{userInfo.username}}</button>
-                            <div id="myModal-write" class="modal fade">
-                                <div class="modal-dialog modal-lg">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h2>Write your message Below</h2>
-                                        </div>
-                                        <form name="messageForm" ng-controller="profileCtrl" ng-submit="sendMessage()">
-                                            <textarea name="description" ng-model="content" placeholder="description" rows="3" class="form-control"></textarea>
-                                            <button type="submit" class="btn btn-success">Send</button>
-                                            {{messageIndicator}}
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#myModal-write" id="write-btn">Message {{userInfo.username}}</button>
                         </div>
                     </div>
                     <!-- End of profile info -->
@@ -169,6 +135,46 @@
             <h3 align="center">
                 The user {{givenUsername}} does not exist.
             </h3>
+        </div>
+    </div>
+    <!-- Modal for viewing my messages -->
+    <div id="myModal-messages" class="modal fade">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>My Inbox</h2>
+                </div>
+                <div class="modal-body">
+                    <div ng-if="!messageFail">
+                        <div class="modal-body" ng-repeat="message in fullMessages">
+                            <button class="btn-link" ng-click="goToProfile(message.sender)" data-toggle="modal" data-target="#myModal-messages"><b>{{message.sender}}</b></button> : {{message.content}}
+                            <hr>
+                        </div>
+                    </div>
+                    <div ng-if="messageFail">
+                        <div class="modal-body">
+                            {{messageFail}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Modal for writing a message -->
+    <div id="myModal-write" class="modal fade">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Write your message Below</h2>
+                </div>
+                <div class="modal-body">
+                    <form name="messageForm" ng-controller="profileCtrl" ng-submit="sendMessage()">
+                        <textarea name="content" ng-model="content" placeholder="Write your message here." rows="5" class="form-control"></textarea>
+                        <button type="submit" class="btn btn-success" id="send-btn">Send</button>
+                        {{messageIndicator}}
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 </div>
