Changed 'delete' to 'deletePost' and some style chanhes to the button.

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -18,8 +18,8 @@ p {
 }
 
 #edit-btn {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
+    border-radius: 0px;
+    border-right: 1px solid rgb(0, 70, 160);
 }
 #delete-btn {
     border-top-left-radius: 0;
