--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -110,14 +110,11 @@
                                                 <!-- fixing description length to display by 250 chars -->
                                                 <p>{{ post.description.slice(0,250) }}...</p>
                                                 <!-- link to show post page -->
-                                                <button type="button" ng-if="myProfile" ng-click="editPost()" class="btn btn-primary" id="edit-btn">Edit</button>
-                                                <button id="view-btn" class="btn btn-primary" data-toggle="modal" data-target="#myModal-{{ post._id }}">View more</button>
                                                 <div ng-controller="profileCtrl" ng-click="deletePost()">
                                                     <button type="button" ng-if="myProfile" class="btn btn-primary" id="delete-btn">Delete</button>
                                                 </div>
-                                                <div ng-controller="profileCtrl" ng-click="editPost()">
-                                                    <button type="button" ng-if="myProfile" class="btn btn-primary" id="edit-btn">Edit</button>
-                                                </div>
+                                                <button type="button" ng-if="myProfile" ng-click="editPost()" class="btn btn-primary" id="edit-btn">Edit</button>
+                                                <button id="view-btn" class="btn btn-primary" data-toggle="modal" data-target="#myModal-{{ post._id }}">View more</button>
                                             </div>
                                             <!-- End of media-body -->
                                         </div>
@@ -282,6 +279,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
@@ -298,6 +298,9 @@
                         <button type="submit" class="btn btn-success" id="send-btn">Send</button>
                         {{messageIndicator}}
                     </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 </div>
             </div>
         </div>
