added btn-danger to be float: right

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,12 +30,16 @@ body {
   float: right;
 }
 
-.media-body .btn-primary {
+.media-body .btn-primary,
+.media-body .btn-danger {
   position: relative;
-  background-color: #2e91f7;
   border: none;
   float: right;
   /*bottom: -15px;*/
+}
+
+.media-body .btn-primary {
+  background-color: #2e91f7;
 }
 
 .media-body .btn-primary:hover {
