--- a/public/views/addPost.html
+++ b/public/views/addPost.html
@@ -23,12 +23,12 @@
                 <hr>
                 <div class="form-group">
                     <label for="type">Post Type (required)</label> <br>
-                    <input type="radio" name="type" ng-model="post.type" value="sell"> Sell
-                    <input type="radio" name="type" ng-model="post.type" value="exchange"> Exchange
-                    <input type="radio" name="type" ng-model="post.type" value="mate"> Mate
-                    <input type="radio" name="type" ng-model="post.type" value="lost"> Lost
-                    <input type="radio" name="type" ng-model="post.type" value="found"> Found
-                    <input type="radio" name="type" ng-model="post.type" value="shelter"> Shelter
+                    <input type="radio" name="type" ng-model="post.type" required value="sell"> Sell
+                    <input type="radio" name="type" ng-model="post.type" required value="exchange"> Exchange
+                    <input type="radio" name="type" ng-model="post.type" required value="mate"> Mate
+                    <input type="radio" name="type" ng-model="post.type" required value="lost"> Lost
+                    <input type="radio" name="type" ng-model="post.type" required value="found"> Found
+                    <input type="radio" name="type" ng-model="post.type" required value="shelter"> Shelter
                 </div>
 
                 <div class="form-group">
@@ -62,7 +62,7 @@
 
                         <div class="form-group">
                             <label for="genderB">Other Animal gender (required)</label>
-                            <input type="radio" name="genderB" ng-model="post.genderB" value="male"> Male
+                            <input type="radio" name="genderB" ng-model="post.genderB" required value="male"> Male
                             <input type="radio" name="genderB" ng-model="post.genderB" required value="female"> Female
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                     <div ng-switch-when="sell">
                         <div class="form-group">
                             <label for="price">price (required)</label>
-                            <input type="number" min="1" name="price" ng-model="post.price" placeholder="price" class="form-control" />
+                            <input type="number" min="1" name="price" required ng-model="post.price" placeholder="price" class="form-control" />
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,9 @@
             <button type="submit" class="btn btn-primary">Submit</button>
 
         </form>
-
-        <div class="message" ng-if="message" type="danger">{{ message }}</div>
+        <div ng-if="message">
+            <div class="alert alert-danger" ng-if="error==true" type="danger">{{ message }}</div>
+            <div class="alert alert-success" ng-if="error==false" type="danger">{{ message }}</div>
+        </div>
     </div>
 </div>
