--- a/public/views/forgotPassword.html
+++ b/public/views/forgotPassword.html
@@ -1,12 +1,12 @@
 <link rel="stylesheet" href="../css/forgetPassword.css">
 
 <div ng-controller="passCtrl" class="container forgetPassword-form">
-	<form action="/" id="pass">
-		<div class="form-group">
-			<label>Please enter your email</label>
-			<input type="text" id = "email" ng-model="formData.email" class="form-control">
-		</div>
-		<button type="button" ng-click="reset()" class="btn btn-primary btn-block">Reset Password</button>
-	</form>
-	<div ng-if="errorMessage" type = "danger">{{ errorMessage }}</div>
+    <form action="/" id="pass">
+        <div class="form-group">
+            <label>Please enter your email</label>
+            <input type="text" id="email" ng-model="formData.email" class="form-control">
+        </div>
+        <button type="button" ng-click="reset()" class="btn btn-primary btn-block">Reset Password</button>
+    </form>
+    <div class="alert alert-danger" ng-if="errorMessage" type="danger">{{ errorMessage }}</div>
 </div>
