--- a/public/views/login.html
+++ b/public/views/login.html
@@ -3,25 +3,25 @@
 
 <div ng-controller="loginCtrl" class="container login-form">
 
-	<h3 class="text-center">Login to your pettts.com account</h3>
+    <h3 class="text-center">Login to your pettts.com account</h3>
 
-	<div ng-if="errorMessage" type = "danger">{{ errorMessage }}</div>
+    <div class="alert alert-danger" ng-if="errorMessage" type="danger">{{ errorMessage }}</div>
 
-	<form id="login">
-		<div class="form-group">
-			<label>Username or Email</label>
-			<input type="text" id = "username" ng-model="formData.username" class="form-control">
-		</div>
+    <form id="login">
+        <div class="form-group">
+            <label>Username or Email</label>
+            <input type="text" id="username" ng-model="formData.username" class="form-control">
+        </div>
 
-		<div class="form-group">
-			<label style="display: block">Password <span style="float: right"><a href="/forgotPassword">Forget Password</a></span></label>
-			<input type="password" id = "Password" ng-model="formData.password" class="form-control">
-		</div>
-		<button type="button" ng-click="submit()" class="btn btn-success btn-block">Login</button>
-	</form>
+        <div class="form-group">
+            <label style="display: block">Password <span style="float: right"><a href="/forgotPassword">Forget Password</a></span></label>
+            <input type="password" id="Password" ng-model="formData.password" class="form-control">
+        </div>
+        <button type="button" ng-click="submit()" class="btn btn-success btn-block">Login</button>
+    </form>
 
-	<hr>
+    <hr>
 
-	<p class="text-center">Don't have an account? <a href="/register">Register Now!</a>	</p>
+    <p class="text-center">Don't have an account? <a href="/register">Register Now!</a> </p>
 
 </div>
