--- a/public/views/register.html
+++ b/public/views/register.html
@@ -1,76 +1,76 @@
 <link rel="stylesheet" href="../css/register.css">
 
-<div class="register-outer"  ng-controller="registerCtrl">
+<div class="register-outer" ng-controller="registerCtrl">
 
 
-  <div class="registerForm">
+    <div class="registerForm">
 
-    <h2>Enter the pettts.com marketplace now!</h2>
-    <p class="subtitle-register">Get started now - it's for free</p>
+        <h2>Enter the pettts.com marketplace now!</h2>
+        <p class="subtitle-register">Get started now - it's for free</p>
 
-    <hr>
+        <hr>
 
-    <form class="text-left" ng-submit="submitUser()">
+        <form class="text-left" ng-submit="submitUser()">
 
-      <div class="form-group">
-        <label for="username">Username (Required)</label>
-        <input type="text" name="username" ng-model="user.username" placeholder="Username" required class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="username">Username (Required)</label>
+                <input type="text" name="username" ng-model="user.username" placeholder="Username" required class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="password">Password (Required)</label>
-        <input type="password" name="password" ng-model="user.password" placeholder="Password" required class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="password">Password (Required)</label>
+                <input type="password" name="password" ng-model="user.password" placeholder="Password" required class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="email">Email (Required)</label>
-        <input type="text" name="email" ng-model="user.email" placeholder="Email" required class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="email">Email (Required)</label>
+                <input type="text" name="email" ng-model="user.email" placeholder="Email" required class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="firstName">First name (Required)</label>
-        <input type="text" name="firstName" ng-model="user.firstName" placeholder="First Name" required class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="firstName">First name (Required)</label>
+                <input type="text" name="firstName" ng-model="user.firstName" placeholder="First Name" required class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="middleName">Middle name</label>
-        <input type="text" name="middleName" ng-model="user.middleName" placeholder="Middle Name" class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="middleName">Middle name</label>
+                <input type="text" name="middleName" ng-model="user.middleName" placeholder="Middle Name" class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="lastName">Last name (Required)</label>
-        <input type="text" name="lastName" ng-model="user.lastName" placeholder="Last Name" required class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="lastName">Last name (Required)</label>
+                <input type="text" name="lastName" ng-model="user.lastName" placeholder="Last Name" required class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="phoneNumber1">Phone number 1</label>
-        <input type="text" name="phoneNumber1" ng-model="user.phoneNumber1" placeholder="Phone Number 1" class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="phoneNumber1">Phone number 1</label>
+                <input type="text" name="phoneNumber1" ng-model="user.phoneNumber1" placeholder="Phone Number 1" class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="phoneNumber2">Phone number 2</label>
-        <input type="text" name="phoneNumber2" ng-model="user.phoneNumber2" placeholder="Phone Number 2" class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="phoneNumber2">Phone number 2</label>
+                <input type="text" name="phoneNumber2" ng-model="user.phoneNumber2" placeholder="Phone Number 2" class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="homeNumber">Home number</label>
-        <input type="text" name="homeNumber" ng-model="user.homeNumber" placeholder="Home Number" class="form-control">
-      </div>
+            <div class="form-group">
+                <label for="homeNumber">Home number</label>
+                <input type="text" name="homeNumber" ng-model="user.homeNumber" placeholder="Home Number" class="form-control">
+            </div>
 
-      <div class="form-group">
-        <label for="profilePic">Profile picture</label> <br>
-        <input type="file" name="profilePic" ng-File-Model="user.profilePic" />
-      </div>
-      <button type="submit" class="btn btn-success btn-block">Join now</button>
-      <div class = "message" ng-if="message" >{{ message }}</div>
+            <div class="form-group">
+                <label for="profilePic">Profile picture</label> <br>
+                <input type="file" name="profilePic" ng-File-Model="user.profilePic" />
+            </div>
+            <button type="submit" class="btn btn-success btn-block">Join now</button>
+            <div class="alert alert-danger" ng-if="message">{{ message }}</div>
 
 
-      <hr>
+            <hr>
 
-      <p>Already have an account? <a href="/login">Login now</a></p>
+            <p>Already have an account? <a href="/login">Login now</a></p>
 
-    </form>
+        </form>
 
-  </div>
+    </div>
 
 </div>
