--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -298,7 +298,8 @@
                 <div class="modal-body">
                     <form name="messageForm" ng-controller="profileCtrl" ng-submit="sendMessage()">
                         <textarea name="content" ng-model="content" placeholder="Write your message here." rows="5" class="form-control"></textarea>
-                        <button type="submit" class="btn btn-success" id="send-btn">Send</button> {{messageIndicator}}
+                        <button type="submit" class="btn btn-success" id="send-btn">Send</button>
+                        <div ng-if="messageIndicator" class="alert alert-info"> {{messageIndicator}}</div>
                     </form>
                 </div>
                 <div class="modal-footer">
